fix: method that compared if two states were equivalent was not optimal
used initial state instead of 0 in get unreachable states method
added one DFA example